--- a/flicker/index.html
+++ b/flicker/index.html
@@ -50,7 +50,7 @@
     <h2>Flicker is a small, dynamically typed scripting language</h2>
     <hr>
     <p>Instead of listening to me talk about it, why don't I show you some code:</p>
-    <div id="example-code">
+    <div id="example-snippet" class="snippet-highlight">
       <pre style="background-color: var(--shiki-color-background)" tabindex="0"><code><span class="line"><span style="color: var(--shiki-token-keyword)">var</span><span style="color: var(--shiki-color-text)"> i </span><span style="color: var(--shiki-token-keyword)">=</span><span style="color: var(--shiki-color-text)"> </span><span style="color: var(--shiki-token-constant)">4</span></span>
 <span class="line"></span>
 <span class="line"><span style="color: var(--shiki-token-keyword)">fun</span><span style="color: var(--shiki-color-text)"> </span><span style="color: var(--shiki-token-function)">three</span><span style="color: var(--shiki-color-text)">(arg)</span></span>
