--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,29 +16,30 @@
 </header>
 
 <div id="main" class="align-left">
+	<!-- I wish I were using SvelteKit :( -->
 	<h2>FTC Robotics</h2>
-	<p>All images courtesy of HHS Media.</p>
+	<p>Photos courtesy of HHS Media.</p>
 	<div class="container">
 		<div class="row">
 			<div class="column">
-				<img class="demo demo0 cursor" src="static/robot-24-25-onshape.png" onclick="switchSlide(1, 0)"
-				     alt="2024-25 final design for team 6383">
+				<img class="demo demo0 cursor" src="static/robot-24-25-onshape.png" onclick="switchSlide(0, 0)"
+				     alt="2024-25 final design for my team, 6383">
 			</div>
 			<div class="column">
-				<img class="demo demo0 cursor" src="static/printer.jpg" onclick="switchSlide(2, 0)" alt="Prototype of a part for 6383">
+				<img class="demo demo0 cursor" src="static/printer.jpg" onclick="switchSlide(1, 0)" alt="Prototype of a claw piece for 6383">
 			</div>
 			<div class="column">
-				<img class="demo demo0 cursor" src="static/robot-early-2.jpg" onclick="switchSlide(3, 0)" alt="6383 robot in early  development">
+				<img class="demo demo0 cursor" src="static/robot-early-2.jpg" onclick="switchSlide(2, 0)" alt="6383 robot in early  development">
 			</div>
 			<div class="column">
-				<img class="demo demo0 cursor" src="static/robot-early.jpg" onclick="switchSlide(4, 0)"
+				<img class="demo demo0 cursor" src="static/robot-early.jpg" onclick="switchSlide(3, 0)"
 				     alt="6383 robot in early development (again)">
 			</div>
 			<div class="column">
-				<img class="demo demo0 cursor" src="static/15317-bot.jpg" onclick="switchSlide(5, 0)" alt="15317 robot">
+				<img class="demo demo0 cursor" src="static/15317-bot.jpg" onclick="switchSlide(4, 0)" alt="The robot for 15317, the other school team">
 			</div>
 			<div class="column">
-				<img class="demo demo0 cursor" src="static/robot-bucket.jpg" onclick="switchSlide(6, 0)" alt="6383 robot scoring a sample">
+				<img class="demo demo0 cursor" src="static/robot-bucket.jpg" onclick="switchSlide(5, 0)" alt="6383 robot scoring a sample">
 			</div>
 		</div>
 
@@ -49,23 +50,18 @@
 		<div class="slide image-slide0">
 			<img src="static/robot-24-25-onshape.png" alt="">
 		</div>
-
 		<div class="slide image-slide0">
 			<img src="static/printer.jpg" alt="">
 		</div>
-
 		<div class="slide image-slide0">
 			<img src="static/robot-early-2.jpg" alt="">
 		</div>
-
 		<div class="slide image-slide0">
 			<img src="static/robot-early.jpg" alt="">
 		</div>
-
 		<div class="slide image-slide0">
 			<img src="static/15317-bot.jpg" alt="">
 		</div>
-
 		<div class="slide image-slide0">
 			<img src="static/robot-bucket.jpg" alt="">
 		</div>
@@ -74,62 +70,112 @@
 		<a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 	</div>
 
-	<h2>Other Projects</h2>
+	<h2>Practical Engineering Projects</h2>
+	<p>Some small, some large. I like to create my own solution to problems using the tools I have.</p>
 	<div class="container">
 		<div class="row">
 			<div class="column">
-				<img class="demo demo1 cursor" src="static/robot-24-25-onshape.png" onclick="switchSlide(1, 1)"
-				     alt="2024-25 final design for team 6383">
+				<img class="demo demo1 cursor" src="static/shelf.jpg" onclick="switchSlide(0, 1)"
+				     alt="A desk shelf, designed in Onshape and cut on a Shaper Origin">
 			</div>
 			<div class="column">
-				<img class="demo demo1 cursor" src="static/printer.jpg" onclick="switchSlide(2, 1)" alt="Prototype of a part for 6383">
+				<img class="demo demo1 cursor" src="static/shelf-onshape.png" onclick="switchSlide(1, 1)" alt="The same shelf in CAD">
 			</div>
 			<div class="column">
-				<img class="demo demo1 cursor" src="static/robot-early-2.jpg" onclick="switchSlide(3, 1)" alt="6383 robot in early  development">
+				<img class="demo demo1 cursor" src="static/pencil-body.jpg" onclick="switchSlide(2, 1)"
+				     alt="The pencil my brother now uses—fully custom barrel and grip 3D printed (pardon the quality, this photo is old)">
 			</div>
 			<div class="column">
-				<img class="demo demo1 cursor" src="static/robot-early.jpg" onclick="switchSlide(4, 1)"
-				     alt="6383 robot in early development (again)">
+				<img class="demo demo1 cursor" src="static/cord-holder.jpg" onclick="switchSlide(3, 1)" alt="A simple but perfectly functional 3D printed cord holder">
 			</div>
 			<div class="column">
-				<img class="demo demo1 cursor" src="static/15317-bot.jpg" onclick="switchSlide(5, 1)" alt="15317 robot">
+				<img class="demo demo1 cursor" src="static/cord-holder-others.jpg" onclick="switchSlide(4, 1)"
+				     alt="... and the less simple, less functional earlier versions">
 			</div>
 			<div class="column">
-				<img class="demo demo1 cursor" src="static/robot-bucket.jpg" onclick="switchSlide(6, 1)" alt="6383 robot scoring a sample">
+				<img class="demo demo1 cursor" src="static/spice-shelf.jpg" onclick="switchSlide(5, 1)"
+				     alt="A spice shelf made from balsa and plywood">
 			</div>
 		</div>
 
 		<div class="caption-container">
 			<p id="caption1"></p>
 		</div>
-
 		<div class="slide image-slide1">
-			<img src="static/robot-24-25-onshape.png" alt="">
+			<img src="static/shelf.jpg" alt="">
 		</div>
-
 		<div class="slide image-slide1">
-			<img src="static/printer.jpg" alt="">
+			<img src="static/shelf-onshape.png" alt="">
 		</div>
-
 		<div class="slide image-slide1">
-			<img src="static/robot-early-2.jpg" alt="">
+			<img src="static/pencil-body.jpg" alt="">
 		</div>
-
 		<div class="slide image-slide1">
-			<img src="static/robot-early.jpg" alt="">
+			<img src="static/cord-holder.jpg" alt="">
 		</div>
-
 		<div class="slide image-slide1">
-			<img src="static/15317-bot.jpg" alt="">
+			<img src="static/cord-holder-others.jpg" alt="">
 		</div>
-
 		<div class="slide image-slide1">
-			<img src="static/robot-bucket.jpg" alt="">
+			<img src="static/spice-shelf.jpg" alt="">
 		</div>
 
 		<a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
 		<a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 	</div>
+
+	<h2>Fun Engineering Projects</h2>
+	<p>Because learning is fun.</p>
+	<div class="container">
+		<div class="row">
+			<div class="column">
+				<img class="demo demo2 cursor" src="static/rugged-buggy.jpg" onclick="switchSlide(0, 2)"
+				     alt="A little car with with spring suspension... whoops, the front wheels are on backwards">
+			</div>
+			<div class="column">
+				<img class="demo demo2 cursor" src="static/garagebox.jpg" onclick="switchSlide(1, 2)"
+				     alt="A box with a garage door mechanism, designed with my brother to teach him Onshape">
+			</div>
+			<div class="column">
+				<img class="demo demo2 cursor" src="static/garagebox-onshape.png" onclick="switchSlide(2, 2)" alt="The garage-box in CAD">
+			</div>
+			<div class="column">
+				<img class="demo demo2 cursor" src="static/pin-cannon.jpg" onclick="switchSlide(3, 2)" alt="A little cannon made in Tinkercad back in 2022">
+			</div>
+
+		</div>
+
+		<div class="caption-container">
+			<p id="caption2"></p>
+		</div>
+		<div class="slide image-slide2">
+			<img src="static/rugged-buggy.jpg" alt="">
+		</div>
+		<div class="slide image-slide2">
+			<img src="static/garagebox.jpg" alt="">
+		</div>
+		<div class="slide image-slide2">
+			<img src="static/garagebox-onshape.png" alt="">
+		</div>
+		<div class="slide image-slide2">
+			<img src="static/pin-cannon.jpg" alt="">
+		</div>
+
+		<a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+		<a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+	</div>
+
+	<h2>Digital Projects</h2>
+	<ul style="list-style-type: square">
+		<li>
+			<h3>Flicker</h3>
+			<p>
+				A fast dynamically typed programming language. It once was Lox, a toy language from the book <em>Crafting Interpreters</em> by Bob Nystrom.
+				Now you can hardly tell Flicker and Lox are related.
+			</p>
+			<pre><code>Sample?</code></pre>
+		</li>
+	</ul>
 </div>
 </body>
 </html>
