--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@
 	<!-- I wish I were using SvelteKit :( -->
 	<h2>FTC Robotics</h2>
 	<p>Photos courtesy of HHS Media.</p>
-	<div class="container">
+	<div class="gallery">
 		<div class="slide image-slide0">
 			<img src="static/robot-24-25-onshape.png"
 			     alt="2024-25 final design for my team, 6383">
@@ -51,7 +51,7 @@
 
 	<h2>Practical Engineering Projects</h2>
 	<p>Some small, some large. I like to create my own solution to problems using the tools I have.</p>
-	<div class="container">
+	<div class="gallery">
 		<div class="slide image-slide1">
 			<img src="static/shelf.jpg"
 			     alt="A desk shelf, designed in Onshape and cut on a Shaper Origin">
@@ -86,14 +86,14 @@
 
 	<h2>Fun Engineering Projects</h2>
 	<p>Because learning is fun.</p>
-	<div class="container">
+	<div class="gallery">
 		<div class="slide image-slide2">
 			<img src="static/rugged-buggy.jpg"
 			     alt="A little car with with spring suspension... whoops, the front wheels are on backwards">
 		</div>
 		<div class="slide image-slide2">
 			<img src="static/garagebox.jpg"
-			     alt="A box with a garage door mechanism, designed with my brother to teach him Onshape">
+			     alt="A box with a garage door mechanism, designed with my younger brother to teach him Onshape">
 		</div>
 		<div class="slide image-slide2">
 			<img src="static/garagebox-onshape.png" alt="The garage-box in CAD">
@@ -111,16 +111,7 @@
 	</div>
 
 	<h2>Digital Projects</h2>
-	<ul style="list-style-type: square">
-		<li>
-			<h3>Flicker</h3>
-			<p>
-				A fast dynamically typed programming language. It once was Lox, a toy language from the book <em>Crafting Interpreters</em> by Bob Nystrom.
-				Now you can hardly tell Flicker and Lox are related.
-			</p>
-			<pre><code>Sample?</code></pre>
-		</li>
-	</ul>
+
 </div>
 </body>
 </html>
