Add writing and music bits

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -128,8 +128,9 @@
 			<img alt="Earful, my family's music player site. My father made the backend, and I did the frontend in SvelteKit." src="static/earful.png">
 		</div>
 		<div class="slide image-slide3">
-			<img alt="Flicker, my own programming language. It once was Lox, the toy language from Crafting Interpreters by Bob Nystrom, but I've expanded it greatly since then."
-			     src="static/flicker.png">
+			<img
+				alt="Flicker, my programming language. It once was Lox, the toy language from Crafting Interpreters by Bob Nystrom, but I've expanded it greatly since then."
+				src="static/flicker.png">
 		</div>
 		<div class="slide image-slide3">
 			<img alt="A simple platformer, originally made in Scratch, now recreated in Godot." src="static/ruins-godot.png">
@@ -157,6 +158,22 @@
 		<a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 	</div>
 
+	<div>
+		<h2>Miscellaneous</h2>
+		<p>
+			I also like to write—a poem of mine has been published in the <em>Imprint,</em> the HHS literary magazine. I'm too self-conscious to publish most of my
+			writing, but there are a couple I'm comfortable sharing: <a href="./writing/humorous.html">Humorous Piece</a> and <a href="./writing/third-time.html">Third
+			Time's the Charm.</a>
+		</p>
+		<p>Occasionally I compose and arrange music. I only publish some of my pieces, but those will be <a
+			href="https://musescore.com/user/87668716"> on my MuseScore profile.</a>
+		</p>
+		<p>
+			Graphic design is another passion of mine. I am one of the lead designers of the <em>Imprint</em> because I was one of the few people who became
+			comfortable with Adobe InDesign quickly in my Creative Writing class. I prefer to do everything in Figma, but web frontend is okay... in Svelte. I
+			would completely redo this website in SvelteKit if I knew it wouldn't take too long.
+		</p>
+	</div>
 </div>
 </body>
 </html>
