Flatblocks and intro blurb, fix styling issue on Chrome

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,8 +16,15 @@
 </header>
 
 <div class="align-left" id="main">
-	<p>You'll find mostly images here. They're all captioned&#151;so scroll down a bit&#151;but if I were to explain everything in detail, this page would be
-		massive.</p>
+	<p>
+		I'm Lewis. This page is a compendium of <em>most</em> of my creative projects worth mentioning. I've broken it up into categories based on the type of
+		project&#x2014;practical engineering, fun engineering, digital, and miscellaneous, with a section for robotics (which includes some of everything) at the
+		top. Enjoy!
+	</p>
+	<p>
+		You'll find mostly images here. They're all captioned&#151;so scroll down a bit&#151;but if I were to explain everything in detail, this page would be
+		massive.
+	</p>
 
 	<!-- I wish I were using SvelteKit :( -->
 	<h2>FTC Robotics</h2>
@@ -148,6 +155,10 @@
 		<div class="slide image-slide3">
 			<img alt="Plot Twister, a choose-your-own-adventure story engine."
 			     src="static/plot-twister.png">
+		</div>
+		<div class="slide image-slide3">
+			<img alt="A website for creating music with block code."
+			     src="static/flatblocks.png">
 		</div>
 
 		<div class="caption-container">
